--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <head>
 <title>Sparksammy's Poodletooth iLand</title>
 <body>
-<div class="SITE_ROOT" id="SITE_ROOT" style="width:980px;padding-bottom:40px;" data-reactid=".0.$SITE_ROOT"><div id="masterPage" style="width: 980px; position: static; top: 0px; height: 758px;" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot"><div style="width: 980px; position: absolute; left: 0px; height: 132px; bottom: auto; top: 626px;" class="s0_footer s0" data-state=" " id="SITE_FOOTER" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_FOOTER"><div id="SITE_FOOTERscreenWidthBackground" class="s0screenWidthBackground" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_FOOTER.0" style="width: 1350px; left: -185px;"></div><div id="SITE_FOOTERcenteredContent" class="s0centeredContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_FOOTER.1"><div id="SITE_FOOTERbg" class="s0bg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_FOOTER.1.0"></div><div id="SITE_FOOTERinlineContent" class="s0inlineContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_FOOTER.1.1"></div></div></div><div style="width: 980px; position: absolute; top: 0px; height: 126px; left: 0px;" class="s1" data-state=" " id="SITE_HEADER" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER"><div id="SITE_HEADERscreenWidthBackground" class="s1screenWidthBackground" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.0" style="width: 1350px; left: -185px;"></div><div id="SITE_HEADERcenteredContent" class="s1centeredContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1"><div id="SITE_HEADERbg" class="s1bg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.0"></div><div id="SITE_HEADERinlineContent" class="s1inlineContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1"><div style="left: 0px; width: 303px; position: absolute; top: 47px;" class="s2" id="comp-isdja5nm" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-isdja5nm"><h2 class="font_2" style="font-size:38px;"><span style="font-size:38px;"><span style="font-family:anton,sans-serif;">POODLETOOTH iLAND</span></span></h2>
-</div><div style="left: 0px; width: 304px; position: absolute; top: 33px;" class="s2" id="comp-isdjqddd" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-isdjqddd"><h2 class="font_2" style="font-size:18px;"><span style="text-decoration:underline;"><a href="http://sam290.wixsite.com/poodletooth-island" target="_self"><span style="font-size:18px;"><span style="letter-spacing:0em;"><span style="font-family:nimbus-sans-tw01con,sans-serif;">Sparksammy's</span></span></span></a></span></h2>
-</div><div style="left: 293px; width: 226px; position: absolute; top: 56px; height: 37px;" class="s3" data-state="hasContent" id="comp-ixc731j3" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-ixc731j3"><div id="comp-ixc731j3iFrameHolder" class="s3iFrameHolder" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-ixc731j3.0"><iframe sandbox="allow-same-origin allow-forms allow-popups allow-scripts allow-pointer-lock" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-ixc731j3.0.0" src="http://sam290-wixsite-com.usrfiles.com/html/cb44a1_47d8d4a085968982de54b083dcbad15d.html" height="100%" width="100%"></iframe></div></div></div></div></div><div style="width: 980px; position: absolute; top: 126px; height: 500px; left: 0px;" class="s4" data-state="" id="PAGES_CONTAINER" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER"><div id="PAGES_CONTAINERscreenWidthBackground" class="s4screenWidthBackground" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.0" style="width: 1350px; left: -185px;"></div><div id="PAGES_CONTAINERcenteredContent" class="s4centeredContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1"><div id="PAGES_CONTAINERbg" class="s4bg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.0"></div><div id="PAGES_CONTAINERinlineContent" class="s4inlineContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1"><div style="left: 0px; width: 980px; position: absolute; top: 0px; height: 500px;" class="s5" id="SITE_PAGES" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1.$SITE_PAGES"><div style="left: 0px; width: 980px; position: absolute; top: 0px; height: 500px;" class="s6" id="c1dmp" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1.$SITE_PAGES.$c1dmp"><div id="c1dmpbg" class="s6bg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1.$SITE_PAGES.$c1dmp.0"></div><div id="c1dmpinlineContent" class="s6inlineContent" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1.$SITE_PAGES.$c1dmp.1"><div style="left: -1px; width: 304px; position: absolute; top: 40px;" class="s2" id="comp-isdjcj9s" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1.$SITE_PAGES.$c1dmp.1.$comp-isdjcj9s"><p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Poodletooth Island is a Toontown Private Server based off of the Toontown Stride source. It has a lot of new features from the original Toontown, like:</span></p>
-
-<p class="font_8" style="font-size:14px;">&nbsp;</p>
-
+ <div align="center">
+	 <h1>Poodletooth iLand</h1>
+	 <a href=" 
+https://mega.nz/#!JMoRiLIY!mej04ayKEiZ3B_k7WG96qVOBsduUVkGuSJ9oy4q9Rs4
+" style="color:#1241FF;font-size:24px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Now<div></div></a>
+</div> 
+	 <div align="left">
+	 <p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Poodletooth Island is a Toontown Private Server based off of the Toontown Stride source. It has a lot of new features from the original Toontown, like:</span></p>
 <ul class="font_8" style="font-family:open sans,sans-serif; font-size:14px;">
 	<li>
 	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Free admin!</span></p>
@@ -31,13 +33,10 @@
 	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Etc...</span></p>
 	</li>
 </ul>
-
-<p class="font_8" style="font-size:14px;">&nbsp;</p>
-
-<p class="font_8" style="font-size:14px;">&nbsp;</p>
-</div><div style="left: 331px; width: 318px; position: absolute; top: 40px;" class="s2" id="comp-isdjgrn9" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1.$SITE_PAGES.$c1dmp.1.$comp-isdjgrn9"><p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">How to join:</span></p>
-
-<ol class="font_8" style="font-family:open sans,sans-serif; font-size:14px; text-decoration:underline;">
+	</div> 
+	 <div align="right">
+		 <p>How to join:</p>
+	 <ol class="font_8" style="font-family:open sans,sans-serif; font-size:14px; text-decoration:underline;">
 	<li>
 	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Go to your zip file</span></p>
 	</li>
@@ -66,9 +65,6 @@
 	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Have fun!</span></p>
 	</li>
 </ol>
-</div><div style="left: 0px; width: 554px; position: absolute; top: 321px;" class="s2" id="comp-isdjnxk4" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1.$SITE_PAGES.$c1dmp.1.$comp-isdjnxk4"><h2 class="font_2" style="font-size:54px; text-align:center;"><span style="font-size:54px;"><span style="letter-spacing:-0.01em;"><span style="font-family:anton,sans-serif;">WINDOWS/WINE ONLY!!!</span></span></span></h2>
-</div><div style="left: 0px; width: 565px; position: absolute; top: 0px;" class="s2" id="comp-iy6gjvz2" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1.$SITE_PAGES.$c1dmp.1.$comp-iy6gjvz2"><h2 class="font_2" style="font-size:27px; text-align:center;"><span style="font-size:27px;"><span class="color_11"><span style="font-family:anton,sans-serif;"><span class="backcolor_29">NOTE: POODLETOOTH iLand UPDATED! You may now play!</span></span></span></span></h2>
-</div><div style="left: 575px; width: 304px; position: absolute; top: 56px;" class="s2" id="comp-izxbs5k4" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$PAGES_CONTAINER.1.1.$SITE_PAGES.$c1dmp.1.$comp-izxbs5k4"><p class="font_7">Rules:</p>
 
 <p class="font_7">1. Don't shutdown the server</p>
 
@@ -78,8 +74,10 @@
 
 <p class="font_7">4. Stay, toony! Be a friend!</p>
 
+<p class="font_7"><span class="wixGuard">​</span></p>
 
 <p class="font_7">Remember to stay safe out there!</p>
-</div></div></div></div></div></div></div></div></div>
+</div>
+</div> 
 </body>
 </html>
