--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+
 <head>
 <title>Sparksammy's Poodletooth iLand</title>
 <body>
@@ -8,76 +8,52 @@
 https://mega.nz/#!JMoRiLIY!mej04ayKEiZ3B_k7WG96qVOBsduUVkGuSJ9oy4q9Rs4
 " style="color:#1241FF;font-size:24px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Now<div></div></a>
 </div> 
-	 <div align="left">
-	 <p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Poodletooth Island is a Toontown Private Server based off of the Toontown Stride source. It has a lot of new features from the original Toontown, like:</span></p>
-<ul class="font_8" style="font-family:open sans,sans-serif; font-size:14px;">
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Free admin!</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Free injector!</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Connects directly via a fancy launcher</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">New, wacky adventures!</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Make your own!</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">(bing bing bong)</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Etc...</span></p>
-	</li>
-</ul>
+ <div align="left">
+	 <p>Poodletooth Island is a Toontown Private Server based off of the Toontown Stride source. It has a lot of new features from the original Toontown, like:</p>
+
+
+	 <li>Free admin!</li>
+
+    <li>Free admin!</li>
+
+    <li>Free injector!</li>
+
+    <li>Connects directly via a fancy launcher</li>
+
+    <li>New, wacky adventures!</li>
+
+    <li>Make your own!</li>
+
+    <li>(bing bing bong)</li>
+
+    <li>Etc...</li>
+
 	</div> 
-	 <div align="right">
-		 <p>How to join:</p>
-	 <ol class="font_8" style="font-family:open sans,sans-serif; font-size:14px; text-decoration:underline;">
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Go to your zip file</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Extract</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Go to the folder</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Install the included Panda3D</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Go into the dev folder</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">go to win32</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Click start-game.bat</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Type 2 and press enter</span></p>
-	</li>
-	<li>
-	<p class="font_8" style="font-size:14px;"><span style="font-family:open sans,sans-serif;">Have fun!</span></p>
-	</li>
-</ol>
+	<div align="right">
+		
 
-<p class="font_7">1. Don't shutdown the server</p>
+<li>Install the included Panda3D</li>
 
-<p class="font_7">2. The owner (Poodletooth) can do as he pleases</p>
+<li>Go into the dev folder</li>
 
-<p class="font_7">3. Hack for fun, not harm.</p>
+<li>go to win32</li>
 
-<p class="font_7">4. Stay, toony! Be a friend!</p>
+<li>Click start-game.bat</li>
 
-<p class="font_7"><span class="wixGuard">​</span></p>
+<li>Type 2 and press enter</li>
 
-<p class="font_7">Remember to stay safe out there!</p>
-</div>
-</div> 
+<li>Have fun!</li>
+
+	</div>
+	<div align="center">
+		<li>Rules:</li>
+		<li></li>
+		<li>1. Don't shutdown the server</li>
+		<li>2. The owner (Poodletooth) can do as he pleases</li>
+		<li>3. Hack for fun, not harm.</li>
+		<li>4. Stay, toony! Be a friend!</li>
+		<li></li>
+		<li>Remember to stay safe out there!</li>
+	</div>
 </body>
-</html>
+
