--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ https://mega.nz/#!JMoRiLIY!mej04ayKEiZ3B_k7WG96qVOBsduUVkGuSJ9oy4q9Rs4
 
     <li>New, wacky adventures!</li>
 
-    <li>Make your own!</li>
+    <li>Make it your own!</li>
 
     <li>(bing bing bong)</li>
 
@@ -31,23 +31,25 @@ https://mega.nz/#!JMoRiLIY!mej04ayKEiZ3B_k7WG96qVOBsduUVkGuSJ9oy4q9Rs4
 	</div> 
 	<div align="right">
 		
-
+		<p>How to:</p>
 <li>Install the included Panda3D</li>
 
 <li>Go into the dev folder</li>
 
 <li>go to win32</li>
 
-<li>Click start-game.bat</li>
+<li>Click astron, uberdog, and AI, starting one at a time with defaults.</li>
+		
+<li>Port forward or use hamachi</li>
+		
 
-<li>Type 2 and press enter</li>
+		<li>Start the game</li>
 
 <li>Have fun!</li>
 
 	</div>
 	<div align="center">
-		<li>Rules:</li>
-		<li></li>
+		<p>Rules:</p>
 		<li>1. Don't shutdown the server</li>
 		<li>2. The owner (Poodletooth) can do as he pleases</li>
 		<li>3. Hack for fun, not harm.</li>
