--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ https://mega.nz/#!JMoRiLIY!mej04ayKEiZ3B_k7WG96qVOBsduUVkGuSJ9oy4q9Rs4
 
 <li>Click astron, uberdog, and AI, starting one at a time with defaults.</li>
 		
-<li>Port forward or use hamachi</li>
+<li>Port forward or use Hamachi</li>
 		
 
 		<li>Start the game</li>
