--- a/index.html
+++ b/index.html
@@ -34,16 +34,23 @@ https://mega.nz/#!JMoRiLIY!mej04ayKEiZ3B_k7WG96qVOBsduUVkGuSJ9oy4q9Rs4
 		<p>How to:</p>
 <li>Install the included Panda3D</li>
 
+<li>Reboot</li>
+
+		
 <li>Go into the dev folder</li>
 
 <li>go to win32</li>
-
+<li>Start the game</li>
+		<p></p>
+		<b><i><p>To start a server:</p></i></b>
+		<p></p>
+<li>Do steps 1 and 2 above<li>
 <li>Click astron, uberdog, and AI, starting one at a time with defaults.</li>
 		
 <li>Port forward or use Hamachi</li>
+		<p>	Use this video to port forward: https://goo.gl/kgiUWZ</p>
+<p>	Use this video for Hamachi: https://goo.gl/GkG3Fl</p>
 		
-
-		<li>Start the game</li>
 
 <li>Have fun!</li>
 
