--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	 <h1>Poodletooth iLand</h1>
 	 <a href=" 
 https://mega.nz/#!JMoRiLIY!mej04ayKEiZ3B_k7WG96qVOBsduUVkGuSJ9oy4q9Rs4
-" style="color:#1241FF;font-size:24px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Now<div></div></a>
+" style="color:#1241FF;font-size:24px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Now<div></a>
+		 <a href=" 
+https://sparksammy.github.io/pti-site/start-game.bat
+" style="color:#1241FF;font-size:14px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Latest Client Patch<div></a></div>
 </div> 
  <div align="left">
 	 <p>Poodletooth Island is a Toontown Private Server based off of the Toontown Stride source. It has a lot of new features from the original Toontown, like:</p>
