--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ https://sparksammy.github.io/pti-site/start-game.bat
 		<li>3. Hack for fun, not harm.</li>
 		<li>4. Stay, toony! Be a friend!</li>
 		<li>Remember to stay safe out there!</li>
-		<li>Current IP is: 24.175.245.229</li>
+		<li>Current IP is: roflcraft.tk</li>
 	</div>
 </body>
 
