--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@ https://sparksammy.github.io/pti-site/start-game.bat
 	</div> 
 	<div align="right">
 		
-		<p>How to:</p>
+		<p>How to install:</p>
+		<li>Put the folder included in the zip to the C: drive</li>
 <li>Install the included Panda3D</li>
+		
 
 <li>Reboot</li>
 
