--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@ https://mega.nz/#!JMoRiLIY!mej04ayKEiZ3B_k7WG96qVOBsduUVkGuSJ9oy4q9Rs4
 " style="color:#1241FF;font-size:24px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Now</a>
 		 <a href=" 
 https://sparksammy.github.io/pti-site/start-game.bat
-" style="color:#1241FF;font-size:14px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Latest Client Patch</a></div>
-</div> 
+" style="color:#1241FF;font-size:14px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Latest Patch</a></div>
+
+			 <a href=" 
+https://sparksammy.github.io/pti-site/tcpbuffersize.reg
+" style="color:#1241FF;font-size:14px;font-family:Arial Black;text-decoration:none;" target="_blank">Datagram Patch</a></div>
+
+	
+	</div> 
  <div align="left">
 	 <p>Poodletooth Island is a Toontown Private Server based off of the Toontown Stride source. It has a lot of new features from the original Toontown, like:</p>
 
@@ -51,7 +57,7 @@ https://sparksammy.github.io/pti-site/start-game.bat
 		<p></p>
 <li>Do steps 1 and 2 above<li>
 <li>Click astron, uberdog, and AI, starting one at a time with defaults.</li>
-		
+		<li>	Getting Datagram Issue? Download the datagram patch!</li>
 <li>Port forward or use Hamachi</li>
 		<p>	Use this video to port forward: https://goo.gl/kgiUWZ</p>
 <p>	Use this video for Hamachi: https://goo.gl/GkG3Fl</p>
