--- a/index.html
+++ b/index.html
@@ -1,79 +1,1 @@
-
-<head>
-<title>Sparksammy's Poodletooth iLand</title>
-<body>
- <div align="center">
-	 <h1>Poodletooth iLand</h1>
-	 <a href=" 
-https://drive.google.com/file/d/0B1yx0cq7x0e4elRDZWhrNF8yaVU/view?usp=sharing
-" style="color:#1241FF;font-size:24px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Now</a>
-		 <a href=" 
-https://sparksammy.github.io/pti-site/start-game.bat
-" style="color:#1241FF;font-size:14px;font-family:Arial Black;text-decoration:none;" target="_blank">Download Latest Patch</a></div>
-
-			 <a href=" 
-https://sparksammy.github.io/pti-site/fix.zip
-" style="color:#1241FF;font-size:14px;font-family:Arial Black;text-decoration:none;" target="_blank">Datagram Patch</a></div>
-
-	
-	</div> 
- <div align="left">
-	 <p>Poodletooth Island is a Toontown Private Server based off of the Toontown Stride source. It has a lot of new features from the original Toontown, like:</p>
-
-
-	 <li>Free admin!</li>
-
-    <li>Free admin!</li>
-
-    <li>Free injector!</li>
-
-    <li>Connects directly via a fancy launcher</li>
-
-    <li>New, wacky adventures!</li>
-
-    <li>Make it your own!</li>
-
-    <li>(bing bing bong)</li>
-
-    <li>Etc...</li>
-
-	</div> 
-	<div align="right">
-		
-		<p>How to install:</p>
-		<li>Put the folder included in the zip to the C: drive</li>
-<li>Install the included Panda3D</li>
-		
-
-<li>Reboot</li>
-
-		
-<li>Go into the dev folder</li>
-
-<li>go to win32</li>
-<li>Start the game</li>
-		<p></p>
-		<b><i><p>To start a server:</p></i></b>
-		<p></p>
-<li>Do steps 1 and 2 above<li>
-<li>Click astron, uberdog, and AI, starting one at a time with defaults.</li>
-		<li>	Getting Datagram Issue? Download the datagram patch!</li>
-<li>Port forward or use Hamachi</li>
-		<p>	Use this video to port forward: https://goo.gl/kgiUWZ</p>
-<p>	Use this video for Hamachi: https://goo.gl/GkG3Fl</p>
-		
-
-<li>Have fun!</li>
-
-	</div>
-	<div align="center">
-		<p>Rules:</p>
-		<li>1. Don't shutdown the server</li>
-		<li>2. The owner (Poodletooth) can do as he pleases</li>
-		<li>3. Hack for fun, not harm.</li>
-		<li>4. Stay, toony! Be a friend!</li>
-		<li>Remember to stay safe out there!</li>
-		<li>Current IP is: Closed for testing with 2.0 servers (improved gfx!)</li>
-	</div>
-</body>
-
+<h1>We are currently working on our new site, please wait...</h1>
