--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<h1>We are currently working on our new site, please wait...</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+
+
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+  
+  <title>Toontown 2 - Trouble in Poodletooth iLand</title>
+</head>
+
+
+<body style="background-color: rgb(238, 255, 138);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
+
+
+<div>
+<div style="text-align: center;"><big>
+</big></div>
+
+<h1 style="text-align: left;">Toontown 2 - Trouble in<br>
+
+</h1>
+
+<h1 style="text-align: left;"><big>Poodletooth iLand</big></h1>
+
+<hr style="width: 100%; height: 2px;">
+<div style="text-align: right;">Poodletooth goes back in time and back to the future to make a safe space for<br>
+
+&nbsp;fellow toons at the toon appocolypse of 2013. It works at first,<br>
+
+however Poodletooth notices a cog in his safe space<br>
+
+at Halloween 2017. Are you toon enough to <br>
+
+save Toontown from the cogs?<br>
+
+&nbsp;<small><small><small><small><span style="font-weight: bold;"></span></small></small></small></small>
+<hr style="width: 100%; height: 2px;"></div>
+
+<div style="text-align: right;"><a href="lore.html"><img style="border: 0px solid ; width: 67px; height: 60px;" alt="Next" src="next.png"></a><big>
+</big></div>
+
+</div>
+
+
+</body>
+</html>
